<?xml version="1.0"?>
<package>
  <name>path_planner</name>
  <version>0.0.0</version>
  <description>The path_planner package</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>path_msgs</build_depend>
  <build_depend>utils_path</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>path_msgs</run_depend>
  <run_depend>utils_path</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roslib</run_depend>

  <export>
  </export>
</package>
